@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain model US21

class "Entry" {
    -name
    -description
    -urgency
    -expectedDuration
    -status
    -greenSpace
}

class "ToDoListEntry" {
    -task
}

class "ToDoList" {
    -entries
}


Entry "1" -- "0..*" ToDoList : exists in >
ToDoList "1" -- "0..*" ToDoListEntry : contains >
ToDoListEntry "1" -- "1" Entry : contains >
@enduml